src/test/ui/const-generics/generic_const_exprs/issue-85848.stderr
error[E0277]: the trait bound `&C: Delegates<()>` is not satisfied
  --> $DIR/issue-85848.rs:24:29
   |
LL |     writes_to_specific_path(&cap);
   |     ----------------------- ^^^^ the trait `Delegates<()>` is not implemented for `&C`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Delegates<U>` is implemented for `T`
note: required by a bound in `writes_to_specific_path`
  --> $DIR/issue-85848.rs:30:31
   |
LL | fn writes_to_specific_path<C: Delegates<()>>(cap: &C) {}
   |                               ^^^^^^^^^^^^^ required by this bound in `writes_to_specific_path`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
